# tasks_prompts_chain

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
requirements/: requirements-dev.txt
src/tasks_prompts_chain/: client_llm_sdk.py  tasks_prompts_chain.py
tests/: test_tasks_prompts_chain.py
