[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "tasks_prompts_chain"
version = "0.0.2"
authors = [
  { name="Samir Ben Sghaier", email="ben.sghaier.samir@gmail.com" },
]
description = "A Python library for creating and executing chains of prompts using OpenAI's SDK with streaming support and template formatting."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/smirfolio/tasks_prompts_chain"
Issues = "https://github.com/smirfolio/tasks_prompts_chain/issues"